# scm-automation-examples

./: README.md  pyproject.toml
pan-scm-sdk/collect/: address_groups.py  addresses.py  security_rules.py  tags.py  url_categories.py
pan-scm-sdk/create/: address_groups.py  addresses.py  create_tag.py  security_rules.py  url_categories.py
pan-scm-sdk/delete/: security_rules.py
