[tool.poetry]
name = "scm-automation-examples"
version = "0.1.0"
description = ""
authors = ["Radoslaw Kochman <radoslaw.kochman@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pan-scm-sdk = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
